--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -487,3 +487,114 @@ http://www.csdn123.com/html/itweb/20131101/200299.htm
 		
 		
 可能由于之前使用kCTForegroundColorAttributeNamevalue去设置了颜色，当再用NSForegroundColorAttributeNamevalue出现此问题
+
+##问题00035 iOS开发图像处理－－绘制图片上下颠倒
+
+0. 在iOS的不同framework中使用着不同的坐标系 ：
+		UIKit － y轴向下
+		Core Graphics(Quartz) － y轴向上
+		OpenGL ES － y轴向上
+
+1. 解决方法一：在绘制到context前通过矩阵垂直翻转坐标系
+	
+		// uiImage是将要绘制的UIImage图片，width和height是它的宽高
+		CGContextTranslateCTM(context, 0, height);
+		CGContextScaleCTM(context, 1.0, -1.0);
+		CGContextDrawImage(context, CGRectMake(0, 0, width, height), uiImage.CGImage);
+
+2. 解决方法二：使用UIImage的drawInRect函数，该函数内部能自动处理图片的正确方向
+
+		// uiImage是将要绘制的UIImage图片，width和height是它的宽高
+		UIGraphicsPushContext( context );
+		[uiImage drawInRect:CGRectMake(0, 0, width, height)];
+		UIGraphicsPopContext();
+	
+3. 垂直翻转投影矩阵
+	
+这种方法通过设置上下颠倒的投影矩阵，使得原本y轴向上的GL坐标系看起来变成了y轴向下，并且坐标原点从屏幕左下角移到了屏幕左上角。如果你习惯使用y轴向下的坐标系进行二维操作，可以使用这种方法，同时原本颠倒的图片经过再次颠倒后回到了正确的方向：
+
+	// uiImage是将要绘制的UIImage图片，width和height是它的宽高
+
+	// 图片被颠倒的绘制到context
+	CGContextDrawImage(context, CGRectMake(0, 0, width, height), uiImage.CGImage);
+
+	// 设置上下颠倒的投影矩阵（则原来颠倒的图片回到了正确的方向）
+	glMatrixMode(GL_PROJECTION);
+	glLoadIdentity();
+	glOrthof( 0, framebufferWidth, framebufferHeight, 0, -1, 1 );
+	
+	
+##问题00036 Git Tag 使用
+
+[git命令之git tag 给当前分支打标签](http://blog.csdn.net/wangjia55/article/details/8793577)
+	
+	通常的git push不会将标签对象提交到git服务器，我们需要进行显式的操作：
+	$ git push origin v0.1.2 # 将v0.1.2标签提交到git服务器
+	$ git push origin –tags # 将本地所有标签一次性提交到git服务器
+	
+	删除远程分支
+	git branch -r -d origin/branch-name
+	git push origin :branch-name
+
+	删除远程Tag
+	显示本地 tag
+	git tag 
+	Remote_Systems_Operation
+	删除本地tag
+	git tag -d Remote_Systems_Operation 
+	用push, 删除远程tag
+	git push origin :refs/tags/Remote_Systems_Operation
+	
+	
+##问题00037 npm端口占用
+
+
+	//查看当前占用端口的程序
+	Run the following command to find out which process:
+
+	   lsof -n -i4TCP:8081 
+	   
+	//杀掉其他进程
+	You can either shut down the other process:
+
+	   kill -9 <PID> 
+
+	or run packager on different port.
+	
+	
+##问题00038 UITableView：改变 TableHeaderView 的高度
+转自[云淡风轻~](http://www.cnblogs.com/ihojin/p/tableHeaderView-resizeheight.html)
+	参考：http://stackoverflow.com/a/526825
+
+	有这么一种需求，在列表顶端显示一些别样的数据，而这个别样的数据则需要通过一个别样的 View 来展现，它便是 UITableView 的 tableHeaderView。
+
+	倘若 tableHeaderView 里的内容很固定，高度不要随着内容的不同而改变，这样还好。
+
+	如果，高度是需要动态改变的，某些人（比如我）可能就会遇到这样一个难题：
+
+	已经给 view 中的每个子 view 设置过值了，高度算过了，frame 也重新设置过了，可 tableHeaderView 的高度却还是之前的高度，没有变化。内容变多，则会有一部分看不见了；内容变少，则有一部分空白，放在那里实在不好看。
+
+	怎么办？？
+
+	view 作为 tableView 的 tableHeaderView，单纯的改变 view 的 frame 是无济于事的，tableView  不会大度到时刻适应它的高度（以后 Apple 会不会改变就不知道了），所以，如何告诉tableView 它的 tableHeaderView 已经改变了？很简单，就一句话（关键最后一句）：
+
+	[webView sizeToFit];
+	CGRect newFrame = headerView.frame;
+	newFrame.size.height = newFrame.size.height + webView.frame.size.height;
+	headerView.frame = newFrame;
+	[self.tableView setTableHeaderView:headerView];
+	 这样以后，效果就出来了。不过这种过度显得有些生硬，能不能加一点点动画，让它变得顺眼一些呢？试试下面的代码：
+
+	[self.tableView beginUpdates];
+	[self.tableView setTableHeaderView:headerView];
+	[self.tableView endUpdates];
+	
+##问题00039 iOS UITableViewHeaderFooterView: Unable to change background color
+
+	http://stackoverflow.com/questions/15604900/ios-uitableviewheaderfooterview-unable-to-change-background-color
+	
+	self.backgroundView = ({
+	    UIView * view = [[UIView alloc] initWithFrame:self.bounds];
+	    view.backgroundColor = [UIColor clearColor];
+	    view;
+	    });
