--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -598,3 +598,13 @@ http://www.csdn123.com/html/itweb/20131101/200299.htm
 	    view.backgroundColor = [UIColor clearColor];
 	    view;
 	    });
+		
+##问题00040 lldb error: variable not available
+
+	描述： release模式下有些变量查看时显示为nil
+	
+	原因： Xcode在release模式下开启轻量级调试模式
+	
+	可在Build Setting|Apple Llvm 7.0-code Generation | Optimization Level | release 设置为none，与Debug保持一致即可
+	
+	出处: http://stackoverflow.com/questions/13040777/lldb-error-variable-not-available
