--- a/Git/基础使用.md
+++ b/Git/基础使用.md
@@ -68,3 +68,22 @@
 	MAC是一个例外，它会执行bash_profile，但不会去管.bashrc
 
 [douban](http://www.douban.com/note/321472256/)
+
+
+##Git 分支管理
+
+	
+	git branch  //显示本地分支
+	
+	git branch -a //显示本地和远程分支
+	
+	git branch -b release-1.0.0 //在当前tag创建分支
+	
+	git push origin release-1.0.0  //将本地通知推送到远程
+	git branch -d release-1.0.0 //删除本地分支
+	git push origin :release-1.0.0  //删除远程分支
+	
+	git fetch origin  //同步本地远程分支
+	
+	
+	
