--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -608,3 +608,25 @@ http://www.csdn123.com/html/itweb/20131101/200299.htm
 	可在Build Setting|Apple Llvm 7.0-code Generation | Optimization Level | release 设置为none，与Debug保持一致即可
 	
 	出处: http://stackoverflow.com/questions/13040777/lldb-error-variable-not-available
+	
+	
+##问题00041 Apple Worldwide Developer Relations失效
+
+1，按照你那个链接下载，https://developer.apple.com/certificationauthority/AppleWWDRCA.cer，并安装。
+2. 删除过期的证书
+3. 将证书转移到system下
+
+https://segmentfault.com/q/1010000004433963/a-1020000004434224
+
+##问题00042 Application Loader 上传中断后无法继续上传的解决方法
+
+把Application Loader(XCode->Organizer->Archived Applications->Submit)中正在上传的文件中断或者删除，再次Submit提示：Cannot proceed with delivery: an existing transporter instance is currently uploading this package。无论如何Clean All、重新Submit都失败，给出上述提示。
+原因：上传的动作被记录在UploadToken中了。解决方法：
+（1）打开终端，输入cd，到达个人用户目录下。
+（2）输入ls -a，可以看到一个隐藏的目录 .itmstransporter
+（3）cd .itmstransporter/UploadTokens
+（4）ls ，可以看到一个类似 xxxxx.local_itunesConnectUSERxxxxxx.itmsp.token文件
+（5）nano  xxxxx.local_itunesConnectUSERxxxxxx.itmsp.token，在里面把内容都删除，保存。
+（6）重新在Organizer里面submit，ok了
+
+http://blog.csdn.net/zhangkongzhongyun/article/details/**24037169**
