--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -618,6 +618,7 @@ http://www.csdn123.com/html/itweb/20131101/200299.htm
 
 https://segmentfault.com/q/1010000004433963/a-1020000004434224
 
+
 ##问题00042 Application Loader 上传中断后无法继续上传的解决方法
 
 把Application Loader(XCode->Organizer->Archived Applications->Submit)中正在上传的文件中断或者删除，再次Submit提示：Cannot proceed with delivery: an existing transporter instance is currently uploading this package。无论如何Clean All、重新Submit都失败，给出上述提示。
@@ -630,3 +631,61 @@ https://segmentfault.com/q/1010000004433963/a-1020000004434224
 （6）重新在Organizer里面submit，ok了
 
 http://blog.csdn.net/zhangkongzhongyun/article/details/**24037169**
+
+
+##问题00043 terminal-plus 终端无法正常显示中文zsh下
+
+	解决：
+	vim ~/.zshrc
+	
+	添加export LANG=fr_FR.UTF-8
+	
+https://github.com/jeremyramin/terminal-plus/issues/28
+
+
+##问题00044 禁用系统对图片的渲染
+
+ 
+ ghVc.tabBarItem = [[UITabBarItem alloc] initWithTitle:@"赛事" image:[UIImage imageNamed:@"home_n"] selectedImage:[UIImage imageNamed:@"home_s"]];
+ 
+ lotteryVC.tabBarItem = [[UITabBarItem alloc] initWithTitle:@"捕金" image:[UIImage imageNamed:@"getcoin_n"] selectedImage:[[UIImage imageNamed:@"getcoin_ns"] imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal]];
+ 
+ http://www.2cto.com/kf/201412/359004.html
+ 
+ 
+##问题00045 处理手势冲突1
+
+
+//是否相应当前touch事件
+	
+	//注意 当前gestureRecognizer的locationInView返回值无效，应该通过touch获取
+	- (BOOL)gestureRecognizer:(UIGestureRecognizer *)gestureRecognizer shouldReceiveTouch:(UITouch *)touch
+	{
+	    if(gestureRecognizer == self.tapTopicViewGR) {
+	        CGPoint point = [touch locationInView:gestureRecognizer.view];
+	        NSString *topic = [NSString stringWithFormat:@"#%@#", self.model.title];
+	        CGRect topicRect = (CGRect) {
+	            .origin={0,0},
+	            .size=[topic sizeWithAttributes:@{NSFontAttributeName: [UIFont systemFontOfSize:13], NSForegroundColorAttributeName : [UIColor red:68 green:79 blue:93 alpha:1]}]};
+	        if(CGRectContainsPoint(topicRect, point)) {
+	            return YES;
+	        }else {
+	            return NO;
+	        }
+	    }
+	    return NO;
+	}
+
+
+https://github.com/TTTAttributedLabel/TTTAttributedLabel/blob/master/TTTAttributedLabel/TTTAttributedLabel.m?#L1665
+
+
+##问题00046 动态更新TabbarItem的图片问题
+
+		self.tabBarItem
+		self.tabBarController.selectedViewController.tabBarItem
+		无效
+        [[self.tabBarController.tabBar.items objectAtIndex:2] setImage:[UIImage imageNamed:@"discover_n"]];
+        [[self.tabBarController.tabBar.items objectAtIndex:2] setSelectedImage:[UIImage imageNamed:@"discover_s"]];
+		
+http://stackoverflow.com/questions/8847483/how-to-programmatically-change-the-tabbaritems-image
