--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -689,3 +689,39 @@ https://github.com/TTTAttributedLabel/TTTAttributedLabel/blob/master/TTTAttribut
         [[self.tabBarController.tabBar.items objectAtIndex:2] setSelectedImage:[UIImage imageNamed:@"discover_s"]];
 		
 http://stackoverflow.com/questions/8847483/how-to-programmatically-change-the-tabbaritems-image
+
+##问题00047 去除字符串两端的空格
+
+	NSString* str = @" [d da fa]     ";  
+	NSString* res = [str stringByTrimmingCharactersInSet:[NSCharacterSet whitespaceCharacterSet]];  
+	
+	http://zani.iteye.com/blog/1048073
+	
+	
+##问题00048 收到通知以后，怎样判断应用程序在前台还是后台？
+
+	[UIApplication sharedApplication].applicationState == UIApplicationStateActive
+	这是在前台
+	UIApplicationStateBackground 这是在后台
+	
+	UIApplicationStateInactive 不活跃
+	
+	https://segmentfault.com/q/1010000002756767
+	
+##问题00049 推送证书问题
+
+	开发证书 ＋ iOS App Development ＝ 开发配置文件      开发推送
+	发布证书 ＋ App Store ＝ 发布配置文件  发布推送
+	发布证书 ＋ Ad Hoc ＝ 测试发布配置文件  发布推送
+	
+	
+	
+##问题00050 ld: library not found for -lxxxx
+
+这个错误是说编译时找不到xxxx这个链接库
+
+1. 方法一：点击 XCode 工程文件，在 Build Phases 中查看 “ Link binary With Libraries”  
+
+2. 方法二：在工程的 Target 中选中要执行编译的某个target， 然后 “get info”，打开 Build 设置页面，在 “ Library Search Path” 中添加缺失链接库的所在文件夹的路径。
+
+3. Pod中删除缺失库，再添加 然后pod install
