--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -725,3 +725,193 @@ http://stackoverflow.com/questions/8847483/how-to-programmatically-change-the-ta
 2. 方法二：在工程的 Target 中选中要执行编译的某个target， 然后 “get info”，打开 Build 设置页面，在 “ Library Search Path” 中添加缺失链接库的所在文件夹的路径。
 
 3. Pod中删除缺失库，再添加 然后pod install
+
+
+##问题00051 禁止IB执行drawRact：方法
+
+	
+	#if !TARGET_INTERFACE_BUILDER
+    // this code will run in the app itself
+    //draw something
+	#else
+    // this code will execute only in IB
+	#endif
+
+
+##问题00052 正则表达式问题
+
+	NSRegularExpression //
+	
+	
+	//匹配模式
+	NSRegularExpressionOptions /* Match letters in the pattern independent of case. */
+	    AllowCommentsAndWhitespace /* Ignore whitespace and #-prefixed comments in the pattern. */
+		忽略空格和# -
+		
+	    IgnoreMetacharacters /* Treat the entire pattern as a literal string. */
+		整体化
+		
+	    DotMatchesLineSeparators /* Allow . to match any character, including line separators. */
+		允许使用.匹配任意字符，包括分隔符
+		
+	    AnchorsMatchLines /* Allow ^ and $ to match the start and end of lines. */
+		允许^和$在匹配的开始和结束行
+		
+	    UseUnixLineSeparators /* Treat only \n as a line separator (otherwise, all standard line separators are used). */
+		(查找范围为整个的话无效)
+		
+	    UseUnicodeWordBoundaries /* Use Unicode TR#29 to specify word boundaries (otherwise, traditional regular expression word boundaries are used). */
+		
+	
+	//查询模式
+	NSMatchingOptions
+		ReportProgress /* Call the block periodically during long-running match operations. */
+		定期执行block，在长时间查询过程中
+		
+		ReportCompletion /* Call the block once after the completion of any matching. */
+		查询结束后，执行block
+		
+	    Anchored /* Limit matches to those at the start of the search range. */
+		根据限制，匹配的搜索
+		
+	   	WithTransparentBounds /* Allow matching to look beyond the bounds of the search range. */
+		允许查询超出限制范围
+		
+	    WithoutAnchoringBounds /* Prevent ^ and $ from automatically matching the beginning and end of the search range. */
+		防止^和$自动匹配搜索范围的开始和结束。
+	
+    1. 返回所有匹配结果的集合(适合,从一段字符串中提取我们想要匹配的所有数据)
+      *  - (NSArray *)matchesInString:(NSString *)string options:(NSMatchingOptions)options range:(NSRange)range;
+      2. 返回正确匹配的个数(通过等于0,来验证邮箱,电话什么的,代替NSPredicate)
+      *  - (NSUInteger)numberOfMatchesInString:(NSString *)string options:(NSMatchingOptions)options range:(NSRange)range;
+      3. 返回第一个匹配的结果。注意，匹配的结果保存在  NSTextCheckingResult 类型中
+      *  - (NSTextCheckingResult *)firstMatchInString:(NSString *)string options:(NSMatchingOptions)options range:(NSRange)range;
+      4. 返回第一个正确匹配结果字符串的NSRange
+      *  - (NSRange)rangeOfFirstMatchInString:(NSString *)string options:(NSMatchingOptions)options range:(NSRange)range;
+      5. block方法
+      *  - (void)enumerateMatchesInString:(NSString *)string options:(NSMatchingOptions)options range:(NSRange)range usingBlock:(void (^)(NSTextCheckingResult *result, NSMatchingFlags flags, BOOL *stop))block;
+      */
+	  
+	  
+//http://www.tuicool.com/articles/RBnqqeQ
+//http://blog.csdn.net/ysy441088327/article/details/7521963
+//http://zhuhaibobb.blog.163.com/blog/static/27440067201411752450958/
+
+
+
+##问题00053 Mongo运行错误：Failed to connect 127.0.0.1:27017,reason:errno:10061
+
+	原因是mongodb的服务没有开启，开启服务后问题就能解决了，开启服务命令：mongod --dbpath "d:\mongodb\data
+
+	只要操作mongodb数据库，服务就要一直开着
+	
+http://www.html5jq.com/fe/angular_node/20141206/22.html
+
+
+##问题00054 How to remove cache in WKWebview
+
+```Swift
+
+	if #available(iOS 9.0, *) {
+	  let websiteDataTypes = NSSet(array: [WKWebsiteDataTypeDiskCache, s])
+	  let date = NSDate(timeIntervalSince1970: 0)
+	  WKWebsiteDataStore.defaultDataStore().removeDataOfTypes(websiteDataTypes as! Set<String>, modifiedSince: date, completionHandler:{ })
+	} else {
+	    var libraryPath = NSSearchPathForDirectoriesInDomains(NSSearchPathDirectory.LibraryDirectory, NSSearchPathDomainMask.UserDomainMask, true).first!
+	    libraryPath += "/Cookies"
+
+	    do {
+	      try NSFileManager.defaultManager().removeItemAtPath(libraryPath)
+	    } catch {
+	      print("error")
+	    }
+	    NSURLCache.sharedURLCache().removeAllCachedResponses()
+	}	
+```	
+
+```Objective-C
+	
+	#if __IPHONE_OS_VERSION_MIN_REQUIRED >= 9000
+	        [[WKWebsiteDataStore defaultDataStore] removeDataOfTypes:[NSSet setWithArray:@[WKWebsiteDataTypeDiskCache, WKWebsiteDataTypeMemoryCache]] modifiedSince:[NSDate dateWithTimeIntervalSince1970:0] completionHandler:^{}];
+	#else 
+	        NSURL *cachePath = [[NSURL fileURLWithPath:[NSSearchPathForDirectoriesInDomains(NSLibraryDirectory,NSUserDomainMask, YES) firstObject]] URLByAppendingPathComponent:@"Cookies"];
+	        NSError *error;
+	        if([[NSFileManager defaultManager] removeItemAtURL:cachePath error:&error]) {
+	            if(error) {
+	                NSLog(@"%@", error);
+	            }
+	        }
+	#endif
+```
+http://stackoverflow.com/questions/27105094/how-to-remove-cache-in-wkwebvie
+
+
+##问题00055 ReactNative如何让一个View盖在另一个View之上
+
+
+	<View style={styles.container}>
+	 	<View style={styles.listView} >
+			<Text style={[styles.text, {paddingBottom: 5, fontSize: 12}]}>剑气纵横三万里，一剑光寒十九州</Text>
+		</View>
+		<View style={styles.iconImageView} />
+	</View>
+	
+	var styles = React.StyleSheet.create({
+	  container: {
+	    flex: 1,
+	  },
+	  listView: {  //ListView
+    	position: 'absolute',
+    	top: 0,
+    	bottom: 0,
+    	left: 0,
+    	right: 0
+	  },
+	  iconImageView: {  //用户头像
+	    	marginTop: -45,
+	    	width:60,
+	    	height: 60,
+	    	marginLeft: 20,
+	    	borderRadius: 30,
+	    	backgroundColor: 'rgb(1, 100, 0)'
+	  },
+	})
+	
+http://stackoverflow.com/questions/33761012/how-to-place-an-image-on-top-of-other-image-in-react-native
+
+
+##问题00056 ReactNative 调用Native方法时，self.navigationController为null
+
+当ViewController注册为JS class，此时将丢失ViewController部分属性。
+解决方法：从其他类中拿到navigationController进行操作
+
+React Native 目前是不支持封装 UIViewController
+
+https://github.com/facebook/react-native/issues/1148
+
+http://www.tuicool.com/articles/uEJfaqb
+
+
+##问题00057 Git 合并指定文件
+
+git checkout [branchName] -- fileName...
+
+http://zhidao.baidu.com/link?url=Qv5KnrBQXYxnH4l9ePTODpOWUShEfx3IqAHqXYkkAMqsSeOXqXFdqhlUCxIlsTvWaOekMgY9Y7Q9mbvTlKomE2-3pMXPCmvGheEYDJSg3Y3
+
+
+##问题00058 用户取消图片编辑后状态栏变黑
+
+	-(void)imagePickerControllerDidCancel:(UIImagePickerController *)picker
+	{
+	    [picker dismissViewControllerAnimated:YES completion:nil];
+	    [self setNeedsStatusBarAppearanceUpdate];
+	    [[UIApplication sharedApplication] setStatusBarStyle:UIStatusBarStyleLightContent];
+	}
+	
+	
+##问题00059 正则查找字符串中的数字
+
+	NSRange range = [string rangeOfString:@"[1-9]\\d*" options:NSRegularExpressionSearch];
+	
+http://blog.csdn.net/waterforest_pang/article/details/39153355
+	
