--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -915,3 +915,47 @@ http://zhidao.baidu.com/link?url=Qv5KnrBQXYxnH4l9ePTODpOWUShEfx3IqAHqXYkkAMqsSeO
 	
 http://blog.csdn.net/waterforest_pang/article/details/39153355
 	
+##问题00060 Unable to add App ID because the '10' App ID limit in '7' days has been exceeded
+
+这是苹果对Bundle Identifier进行了封锁.
+
+推测:苹果于今天修改了规格,限制了开发者使用免证书的真机调试次数.
+
+一个App ID,免证书真机调试只能进行10次,具体时间没有说明.
+
+但是根据字面翻译意思在7天内只能创建10个项目文件(最主要的是Bundle Identifier名称),关于7天之外是否还能继续创建项目工程.
+
+http://www.cnblogs.com/CrazySL/p/5458375.html
+
+##问题00061 同时响应多个手势
+
+	- (BOOL)gestureRecognizer:(UIGestureRecognizer *)gestureRecognizer shouldRecognizeSimultaneouslyWithGestureRecognizer:(UIGestureRecognizer *)otherGestureRecognizer
+	{
+	    if (self.panGR == gestureRecognizer) {
+	        if ([otherGestureRecognizer.view isKindOfClass:UIScrollView.class]) {
+	            UIScrollView *scrollView = (UIScrollView *)otherGestureRecognizer.view;
+	            if (scrollView.contentOffset.y == 0) {
+	                return YES;
+	            }
+	        }
+	    }
+    
+	    return NO;
+	}
+
+http://stackoverflow.com/questions/14650991/uipangesturerecognizer-conflict-with-scrollview/35909880#35909880
+
+##问题00062 根据函数内存地址找到函数名
+
+	export dSYMPath="$(find ~/Desktop/dSYM  -iname '*.dSYM' -print0 | xargs -0 dwarfdump -u | grep 3FC61C3F-A295-3577-95A1-87EDD2FF8D7C 
+		| sed -E 's/^[^/]+//' | head -n 1)";dwarfdump --arch=arm64 --lookup 0x1005f3ffc "$dSYMPath"
+
+来自友盟
+
+
+##问题00063 指定某一个控制器支持旋转
+
+总代理方法
+
+	- application:supportedInterfaceOrientationsForWindow:
+
