--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -955,7 +955,95 @@ http://stackoverflow.com/questions/14650991/uipangesturerecognizer-conflict-with
 
 ##问题00063 指定某一个控制器支持旋转
 
-总代理方法
+总代理方法 ,,每次旋转屏幕调用
 
 	- application:supportedInterfaceOrientationsForWindow:
 
+
+##问题00064 同步请求
+	
+       NSURL *url=[NSURL URLWithString:@"http://dj.kkqiu.com/mob/get_app_url.php"];
+       NSURLRequest *request=[NSURLRequest requestWithURL:url];
+	   NSData *data=[NSURLConnection sendSynchronousRequest:request returningResponse:nil error:nil];
+
+
+##问题00065 创建NSURLSession同步请求
+
+
+    dispatch_semaphore_t semaphore = dispatch_semaphore_create(0);
+    [[[NSURLSession sharedSession] dataTaskWithRequest:request completionHandler:^(NSData * _Nullable data, NSURLResponse * _Nullable response, NSError * _Nullable error) {
+        if (data) {
+            NSDictionary *dict=[NSJSONSerialization JSONObjectWithData:data options:NSJSONReadingMutableLeaves error:nil];
+        }
+        dispatch_semaphore_signal(semaphore);
+    }] resume];
+    
+    dispatch_semaphore_wait(semaphore, DISPATCH_TIME_FOREVER);
+	
+	
+##问题00066 文件管理
+
+	http://seven-sally.lofter.com/post/19d861_54e83e
+	http://seven-sally.lofter.com/post/19d861_5619fa
+	
+	
+##问题00067 iOS10 打开相册,相机crash
+
+	在plist中添加NSPhotoLibraryUsageDescription NSCameraUsageDescription
+	
+	
+	PHAuthorizationStatus author = [PHPhotoLibrary authorizationStatus];
+	    if(author == PHAuthorizationStatusNotDetermined) {
+	        [PHPhotoLibrary requestAuthorization:^(PHAuthorizationStatus status) {
+	            if(status == PHAuthorizationStatusAuthorized) {
+	                self.allPhotos = [self userPhotoDatas];
+	                [collectionView reloadData];
+	            }else {
+	                [MBProgressHUD showError:@"没有相册访问权限"];
+	                [self dismissViewControllerAnimated:YES completion:nil];
+	            }
+	        }];
+	    }else if(author == PHAuthorizationStatusRestricted || author == PHAuthorizationStatusDenied){
+	        [MBProgressHUD showError:@"没有相册访问权限"];
+	        [self dismissViewControllerAnimated:YES completion:nil];
+	    }else {
+	        self.allPhotos = [self userPhotoDatas];
+	    }
+		
+##问题00068  iOS 设置 Header
+
+	一 NSURLRequest 设置
+
+	//1.创建request
+	NSURLRequest *request = [NSURLRequest requestWithURL:URL];
+
+
+	//2.创建一个 NSMutableURLRequest 添加 header
+	NSMutableURLRequest *mutableRequest = [request mutableCopy];
+	NSString *value = [NSString stringWithFormat:@"Bearer %@",[BZUserTool readToken]];
+	[mutableRequest addValue:value forHTTPHeaderField:@"Authorization"];
+
+	//3.把值覆给request
+	request = [mutableRequest copy];
+
+	//4.查看请求头 
+	NSLog(@"%@", request.allHTTPHeaderFields);
+
+
+
+
+	二 AFHTTPRequestOperationManager 设置
+
+	 AFHTTPRequestOperationManager 设置比较简单
+
+	//1.获取一个管理者
+	AFHTTPRequestOperationManager *mgr = [AFHTTPRequestOperationManager manager];
+
+	//2.得到令牌
+	NSString *value = [NSString stringWithFormat:@"Bearer %@",[BZUserTool readToken]];
+
+	//3.设置
+	[mgr.requestSerializer setValue:value forHTTPHeaderField:@"Authorization"];
+	
+[IOS NSURLRequest 设置 Header](http://my.oschina.net/wolx/blog/406092)
+	
