--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -913,6 +913,10 @@ http://zhidao.baidu.com/link?url=Qv5KnrBQXYxnH4l9ePTODpOWUShEfx3IqAHqXYkkAMqsSeO
 
 	NSRange range = [string rangeOfString:@"[1-9]\\d*" options:NSRegularExpressionSearch];
 	
+	
+	NSRegularExpression *expression = [NSRegularExpression regularExpressionWithPattern:@"[1-9]\\d*\\+{1}[1-9]\\d*" options:NSRegularExpressionAllowCommentsAndWhitespace error:NULL];
+	NSRange range = [expression rangeOfFirstMatchInString:str options:NSMatchingReportCompletion range:NSMakeRange(0, str.length)];
+	
 http://blog.csdn.net/waterforest_pang/article/details/39153355
 	
 ##问题00060 Unable to add App ID because the '10' App ID limit in '7' days has been exceeded
@@ -1046,4 +1050,25 @@ http://stackoverflow.com/questions/14650991/uipangesturerecognizer-conflict-with
 	[mgr.requestSerializer setValue:value forHTTPHeaderField:@"Authorization"];
 	
 [IOS NSURLRequest 设置 Header](http://my.oschina.net/wolx/blog/406092)
+
+
+##问题00069 UITextField禁用粘贴
+
+	覆盖canPerformAction:withSender，canPerformAction:withSender属于UIResponder类
+
+	-(BOOL)canPerformAction:(SEL)action withSender:(id)sender {
+	    UIMenuController *menuController = [UIMenuController sharedMenuController];
+	    if (menuController) {
+	        [UIMenuController sharedMenuController].menuVisible = NO;
+	    }
+	    return NO;
+	}
 	
+[UITextField禁用粘贴](http://blog.sina.com.cn/s/blog_5b914e150102w8s3.html)
+
+
+##问题00070 自动执行Sudo命令
+
+	echo "123" | sudo -S echo "hell" 
+	
+	sudo的 -S 参数
