--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -1072,3 +1072,28 @@ http://stackoverflow.com/questions/14650991/uipangesturerecognizer-conflict-with
 	echo "123" | sudo -S echo "hell" 
 	
 	sudo的 -S 参数
+	
+##问题00071 画一张空心圆图片
+
+	- (UIImage *)coverImage
+	{
+	    UIGraphicsBeginImageContext(CGSizeMake(400, 400));
+	    CGContextRef context = UIGraphicsGetCurrentContext();
+	    CGContextSetFillColorWithColor(context, [UIColor whiteColor].CGColor);
+	    CGContextFillRect(context, CGRectMake(0, 0, 400, 400));
+    
+	    UIBezierPath *path = [UIBezierPath bezierPathWithArcCenter:CGPointMake(200, 200) radius:198 startAngle:0 endAngle:M_PI*2 clockwise:YES];
+	    CGContextAddPath(context, path.CGPath);
+	    [[UIColor red:200 green:200 blue:200 alpha:1] setStroke];
+	    CGContextSetLineWidth(context, 2);
+	    CGContextDrawPath(context, kCGPathStroke);
+    
+	    CGContextSetBlendMode(context, kCGBlendModeClear);
+	    UIBezierPath *arcPath = [UIBezierPath bezierPathWithArcCenter:CGPointMake(200, 200) radius:196 startAngle:0 endAngle:M_PI*2 clockwise:YES];
+	    CGContextAddPath(context, arcPath.CGPath); 
+	    CGContextDrawPath(context, kCGPathFill);
+    
+	    UIImage *newImage = UIGraphicsGetImageFromCurrentImageContext();
+	    UIGraphicsEndImageContext();
+	    return newImage;
+	}
