add Shell add Question

--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -1097,3 +1097,20 @@ http://stackoverflow.com/questions/14650991/uipangesturerecognizer-conflict-with
 	    UIGraphicsEndImageContext();
 	    return newImage;
 	}
+	
+##问题00072 Release和Debug执行问题
+
+	Release模式下makeObjectsPerformSelector 可能会失效
+	
+##问题00073 批处理图片分辨率
+
+	mkdir image1
+	mkdir image2
+	mkdir image3
+	for i in `ls *.png`
+	do
+		 sips -s format png -z 960 640  $i --out image1/"960ss"$i
+		 sips -s format png -z 1136 640  $i --out image2/"1136ss"$i
+		 sips -s format png -z 2208 1242  $i --out image3/"2208ss"$i
+	done
+	
