--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -1114,3 +1114,8 @@ http://stackoverflow.com/questions/14650991/uipangesturerecognizer-conflict-with
 		 sips -s format png -z 2208 1242  $i --out image3/"2208ss"$i
 	done
 	
+	
+##问题00074 //将返回按钮的文字position设置不在屏幕上显示
+
+	[[UIBarButtonItem appearance] setBackButtonTitlePositionAdjustment:UIOffsetMake(NSIntegerMin, NSIntegerMin) forBarMetrics:UIBarMetricsDefault];
+	
