--- a/Apple/基础/问题总结.md
+++ b/Apple/基础/问题总结.md
@@ -1118,4 +1118,7 @@ http://stackoverflow.com/questions/14650991/uipangesturerecognizer-conflict-with
 ##问题00074 //将返回按钮的文字position设置不在屏幕上显示
 
 	[[UIBarButtonItem appearance] setBackButtonTitlePositionAdjustment:UIOffsetMake(NSIntegerMin, NSIntegerMin) forBarMetrics:UIBarMetricsDefault];
-	
+
+##问题00075 beginningOfDocument 为nil
+
+	确保UITextField等为FirstResponder
